<resources>
    <string name="app_name">Pasar Aku</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="file_provider" translatable="false">com.surelabsid.lti.pasaraku.fileprovider</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="search_city_area_or_neighbourhood">Search city,area, or neighbourhood</string>
    <string name="use_current_location">Use current Location</string>
    <string name="choose_state">choose state</string>
    <string name="all_in_indonesia">All in Indonesia</string>
    <string name="categories">Categories</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="if_you_continue_you_are_accepting">If you continue, you are accepting</string>
    <string name="pasar_aku_terms"><u>Pasar Aku Terms and Conditions and Privacy Policy</u></string>
    <string name="judul_iklan">Judul Iklan</string>
    <string name="deskripsi_iklan">Deskripsi Iklan</string>
    <string name="harga">Harga</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="pratinjau">Kirim</string>
    <string name="lokasi">Lokasi</string>
    <string name="add_ads">Buat Iklan</string>
    <string name="details">Details</string>
    <string name="descriptions">Descriptions</string>
    <string name="see_profile">see profile</string>
    <string name="ad_posted_at">Ad Posted at</string>
    <string name="kondisi">Kondisi</string>
    <string name="bekas">Bekas</string>
    <string name="baru">Baru</string>
    <string name="fresh_recommendations">Fresh recommendations</string>
    <string name="apikey">AIzaSyAvutzDn4RiVVyUO16HiGBLGIkw8qd2L4w</string>
    <string name="ads_id">Ads id</string>
    <string name="report_this_ad">report this ad</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="we_will_send_a_confirmation_code_to_your_phone">We will send a confirmation code to your phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="next">Next</string>
    <string name="masukkan_kode_verifikasi">Masukkan Kode Verifikasi</string>
    <string name="kode_verifikasi_telah_dikirimkan_ke_nomor_telepon">Kode Verifikasi telah dikirimkan ke nomor telepon</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="title_activity_basic_info">BasicInfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="jangan_pernah_memberikan_uang_atau_produk_terlebih_dahulu">Jangan pernah memberikan uang atau produk terlebih dahulu</string>
    <string name="laporkan_pengguna_mencurigakan_ke_pasar_aku">Laporkan pengguna mencurigakan ke Pasar Aku</string>
    <string name="lanjutkan_untuk_chat">Lanjutkan untuk Chat</string>
    <string name="_1_bulan_n50_rb">30 Hari\n50.000</string>
    <string name="_6_bulan_n250_rb">180 Hari\n250.000</string>
    <string name="informasi_pembayaran">Informasi Pembayaran</string>
    <string name="titik_tiga">⋮</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_input_your_name">Please input your name</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="please_type_your_password">Please type your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_a_picture_profile">Add a picture profile</string>
    <string name="what_s_your_email">What\'s your email?</string>
    <string name="we_ll_use_it_for_logging_in_and_usual_stuff">We\'ll use it for logging in and usual stuff</string>
    <string name="type_your_email_here">Type your email here</string>
    <string name="add_another_account">Add another account</string>
    <string name="add_another_account_for_easily_login">Add another account for easily login</string>
    <string name="connect_facebook">Connect Facebook</string>
    <string name="connect_google">Connect Google</string>
    <string name="type_something_else_about_you_in_here">Type something else about you in here</string>
    <string name="something_else_about_you">Something else about you?</string>
    <string name="show_other_how_handsome_you_are">show other how handsome you are</string>
    <string name="view_and_edit_profile"><u>View and edit profile</u></string>
    <string name="settings">Settings</string>
    <string name="privacy_and_logout">Privacy and logout</string>
    <string name="help_support"><![CDATA[Help & support]]></string>
    <string name="help_center_and_legal_terms">Help center and legal terms</string>
    <string name="logout">Logout</string>
    <string name="privacy">Privacy Policy</string>
    <string name="phone_number_visibility">Phone number visibility</string>
    <string name="lampirkan_berkas">Lampirkan Berkas</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="foto">Foto</string>
    <string name="pesan">Pesan</string>
    <string name="tips_transaksi_aman">Tips transaksi Aman</string>
    <string name="hapus_chat">Hapus Chat</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="my_ads">My Ads</string>
    <string name="iklan_yang_terpilih">Iklan yang terpilih</string>
    <string name="pilihan_paket_iklan">Pilihan Paket Iklan</string>
    <string name="terapkan">Terapkan</string>
    <string name="favorite">Favorite</string>
    <string name="list_of_your_favorite_stuff">List of your Favorite Stuff</string>
    <string name="semua">Semua</string>

    <string name="laporan_barang">Laporan Iklan</string>
    <string name="konten_menyinggung">Konten Menyinggung</string>
    <string name="penipuan">Penipuan</string>
    <string name="iklan_ganda">Iklan Ganda</string>
    <string name="produk_sudah_terjual">Produk Sudah Terjual</string>
    <string name="lainnya">Lainnya</string>
    <string name="komentari">Komentari</string>
    <string name="kirim_keluhan">Kirim Keluhan</string>
    <string name="lokasi_tidak_disertakan">Lokasi Tidak disertakan</string>
    <string name="reach_us_on">Reach Us on</string>
    <string name="premium">Premium</string>
    <string name="iklan"><u>Iklan</u></string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="password">Password</string>
    <string name="kosongkan_bila_tidak_ingin_mengganti_password">Kosongkan bila tidak ingin mengganti password</string>
    <string name="hapus_iklan">Hapus Iklan</string>
    <string name="edit_iklan">Edit Iklan</string>
    <string name="foto_sebelumnya">Foto Sebelumnya</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="tidak_akses_ke_email_hubungi_admin_klik_disini">Tidak akses ke email? hubungi admin. <b>Klik Disini</b></string>
    <string name="kirim_email">Kirim Email</string>
    <string name="transaction">Transaction</string>
    <string name="your_transaction_in_here">Your transaction in here</string>
    <string name="iklan_terkait">Iklan Terkait</string>
    <string name="masa_aktif_premium">Masa Aktif Premium</string>
    <string name="fitur_premium_pakai_fitur_premium_supaya_iklan_kamu_selalu_muncul_dibagian_utama"><font size="22"><b>Fitur Premium</b></font>\nPakai fitur premium supaya iklan kamu selalu muncul dibagian utama</string>
    <string name="jual_dan_beli_apapun_dari_aplikasi_pasar_aku"><font size="22"><b>Jual dan Beli Apa Aja</b></font>\nJual dan Beli apa aja dari Aplikasi Pasar Aku.\nBanyak pilihan kategori dan barangnya lho</string>
    <string name="cari_berdasarkan_lokasi"><font size="22"><b>Cari Berdasarkan Lokasi</b></font>\nCari barang dan jasa impianmu di Aplikasi Pasar Aku</string>
    <string name="ambil_foto_produk"><font size="22"><b>Ambil Foto Produk</b></font>\nAmbil foto produk dari penyimpanan telepon kamu. Kamu dapat edit dulu sebelum diposting di Aplikasi Pasar Aku</string>
    <string name="selamat_datang_di_aplikasi_pasar_aku"><font size="22"><b>Selamat datang di Aplikasi Pasar Aku</b></font>\nSebuah aplikasi tempat jual beli barang dan jasa. Cari barang dan jasa impianmu</string>
    <string name="attentions"><font size="22"><b>Perhatian</b></font>\nPenggunaan <b>Current Location</b> terkadang kurang Akurat.\nJika hal itu terjadi, silahkan gunakan pilihan\nPronvinsi, Kabupaten serta Kecamatan yang disediakan</string>
    <string name="jangan_tampilkan_lagi_pesan_ini">Jangan Tampilkan Lagi Pesan ini?</string>
    <string name="tutup">Tutup</string>
    <string name="kategori">Kategori</string>

    <string-array name="kind">
        <item>Diterima</item>
        <item>Dikirim</item>
    </string-array>
</resources>