<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/add_another_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lato"
            android:text="@string/add_another_account_for_easily_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_white"
            android:drawableStart="@drawable/facebook"
            android:drawablePadding="10dp"
            android:id="@+id/addFacebook"
            android:gravity="center"
            android:text="@string/connect_facebook"
            android:textAllCaps="false"
            android:textSize="16sp" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_white"
            android:drawableStart="@drawable/google"
            android:drawablePadding="10dp"
            android:id="@+id/addGoogle"
            android:gravity="center"
            android:text="@string/connect_google"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/next"
        android:textColor="@color/white" />
</RelativeLayout>