<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginBottomSheet">


    <ImageView
        android:id="@+id/close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/close" />


    <ImageView
        android:layout_width="230dp"
        android:layout_above="@id/containerLogin"
        android:layout_height="90dp"
        android:layout_below="@id/close"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo_pasar_aku" />

    <LinearLayout
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/darkblue"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="30dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_white"
            android:drawableStart="@drawable/cellphone"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/continue_with_phone"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_button_white"
            android:drawableStart="@drawable/google"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_button_white"
            android:drawableStart="@drawable/facebook"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_button_white"
            android:drawableStart="@drawable/email_outline"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/continue_with_email"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/if_you_continue_you_are_accepting"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:gravity="center"
            android:text="@string/pasar_aku_terms"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>