<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/lampirkan_berkas" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lokasiAnda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/lokasi_anda"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/ic_gps" />

        <TextView
            android:id="@+id/foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/foto"
            android:textAlignment="center"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_picture" />
    </LinearLayout>
</LinearLayout>